--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Glacis Mini Project</title>
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body class="bg-gray-100 flex items-center justify-center h-screen ">
-    <div class="text-center w-screen flex flex-col min-h-3/4 max-h-3/4 justify-start items-center bg-white shadow-md rounded">
-      <div class="w-2/5 ">
+  <body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="text-center w-screen flex flex-col h-full  justify-start items-center bg-white shadow-md rounded ">
+      <div class="sm:w-2/5 w-full">
         <form
           class=" px-8 pt-6 pb-8 mb-4"
           id="airport"
@@ -45,7 +45,7 @@
           </div>
         </form>
       </div>
-      <div class="container mx-auto px-4 min-h-full max-h-full overflow-auto">
+      <div class="container mx-auto px-4 min-h-1/2 max-h-3/4 overflow-auto">
         <div id="countTable"></div>
       </div>
     </div>
